--- a/assets/files/projects.json
+++ b/assets/files/projects.json
@@ -5,7 +5,7 @@
     "project-progress": "Complete",
     "project-progress-tag": "complete",
     "project-img-main": "Cube.png",
-    "project-img-folder": "Cube/",
+    "project-img-folder": "cube/",
     "project-desc-long": "Long Cube Desc",
     "project-tags": "[Java, Gui, ...]"
   },
@@ -15,7 +15,7 @@
     "project-progress": "Complete",
     "project-progress-tag": "complete",
     "project-img-main": "Spotify.png",
-    "project-img-folder": "Spotify/",
+    "project-img-folder": "spotify/",
     "project-desc-long": "Long Spotify Desc",
     "project-tags": "[Python, Arduino, Spotify API,...]"
   },
@@ -25,7 +25,7 @@
     "project-progress": "Theorized",
     "project-progress-tag": "theory",
     "project-img-main": "ten-facts-about-zero-two.png",
-    "project-img-folder": "../Highlighted Projects/",
+    "project-img-folder": "../highlighted-projects/",
     "project-desc-long": "Beautiful",
     "project-tags": "[I LOST,...]"
   },
@@ -35,7 +35,7 @@
     "project-progress": "Work in Progress",
     "project-progress-tag": "wip",
     "project-img-main": "Slide1.png",
-    "project-img-folder": "../Highlighted Projects/",
+    "project-img-folder": "../highlighted-projects/",
     "project-desc-long": "TEST DESC LONG",
     "project-tags": "[TEST1, TEST2, TEST3 TEST4,...]"
   },
@@ -43,7 +43,7 @@
     "project-name": "TESTING",
     "project-description": "TEST DESC",
     "project-img-main": "Slide1.png",
-    "project-img-folder": "../Highlighted Projects/",
+    "project-img-folder": "../highlighted-projects/",
     "project-desc-long": "TEST DESC LONG",
     "project-tags": "[TEST1, TEST2, TEST3 TEST4,...]"
   },
@@ -51,7 +51,7 @@
     "project-name": "TESTING",
     "project-description": "TEST DESC",
     "project-img-main": "Slide1.png",
-    "project-img-folder": "../Highlighted Projects/",
+    "project-img-folder": "../highlighted-projects/",
     "project-desc-long": "TEST DESC LONG",
     "project-tags": "[TEST1, TEST2, TEST3 TEST4,...]"
   }
