--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 To-do.txt
 .vscode/settings.json
+assets/images/projects/LineDrawer/3.Line Drawer - Video Demo Circle.mov
+assets/images/projects/LineDrawer/4.Line Drawer - Video Demo Square.mov
+assets/images/projects/LineDrawer/5.Line Drawer - Video Demo Complex.mov
